filter with patient level threshold
