# v1/organization/main.go
@@ -2,6 +2,7 @@ package organization
 
 import (
 	"MedKick-backend/pkg/echo/middleware"
+
 	"github.com/labstack/echo/v4"
 )
 
@@ -12,9 +13,6 @@ func Routes(r *echo.Group) {
 	r.DELETE("/organization/:id", deleteOrganization, middleware.NotGuest, middleware.HasRole("admin"))
 
 	r.GET("/organization/:id/devices", getDevicesInOrganization, middleware.NotGuest, middleware.HasRole("nurse", "doctor", "admin"))
-
-	r.PUT("/organization/:id/alert-threshold", upsertAlertThreshold, middleware.NotGuest, middleware.HasRole("doctor", "admin"))
-	r.GET("/organization/:id/alert-threshold", listAlertThresholds, middleware.NotGuest, middleware.HasRole("nurse", "doctor", "admin"))
 
 	r.PUT("/organization/:id/interaction-setting", upsertInteractionSetting, middleware.NotGuest, middleware.HasRole("doctor", "admin"))
 	r.GET("/organization/:id/interaction-setting", getInteractionSetting, middleware.NotGuest, middleware.HasRole("nurse", "doctor", "admin"))
